--- a/index.ipynb
+++ b/index.ipynb
@@ -478,7 +478,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "recoleta_marker = "
+    "recoleta_marker = neighborhood_markers"
    ]
   },
   {
